[package]
name = "solana-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"

[dev-dependencies]
assert_matches = "1.4.0"
solana-logger = "=1.14.18"
solana-program-test = "=1.14.18"
solana-sdk = "=1.14.18"
solana-validator = "=1.14.18"
